add  recieve order C logic
